WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80459
[chromium] Fix threaded compositing issues in WebGLLayerChromium (except for printing)
https://bugs.webkit.org/show_bug.cgi?id=80459
Summary
[chromium] Fix threaded compositing issues in WebGLLayerChromium (except for ...
James Robinson
Reported
2012-03-06 17:25:56 PST
[chromium] Fix threaded compositing issues in WebGLLayerChromium (except for printing)
Attachments
Patch
(6.19 KB, patch)
2012-03-06 17:35 PST
,
James Robinson
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-03-06 17:35:39 PST
Created
attachment 130490
[details]
Patch
James Robinson
Comment 2
2012-03-06 17:43:50 PST
Printing in threaded mode taken care of here:
https://bugs.webkit.org/show_bug.cgi?id=80464
Lost context recovery doesn't generally work in threaded mode yet, but it will once
https://bugs.webkit.org/show_bug.cgi?id=80100
lands (currently in the commit queue)
Kenneth Russell
Comment 3
2012-03-06 17:58:32 PST
Comment on
attachment 130490
[details]
Patch Thanks, this is excellent. Do you want to close
https://bugs.webkit.org/show_bug.cgi?id=78129
as a dup of this one?
James Robinson
Comment 4
2012-03-06 18:00:22 PST
Yup, I had forgotten about that other bug. Thanks for the quick review!
James Robinson
Comment 5
2012-03-06 18:00:35 PST
***
Bug 78129
has been marked as a duplicate of this bug. ***
James Robinson
Comment 6
2012-03-06 18:13:14 PST
Committed
r109993
: <
http://trac.webkit.org/changeset/109993
>
Kenneth Russell
Comment 7
2012-04-10 12:19:16 PDT
***
Bug 72739
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug