Source/WebCore/platform/graphics/chromium/WebGLLayerChromium.h
@@ -53,6 +53,7 @@ public:
     void setTextureId(unsigned textureId) { m_textureId = textureId; }
 
     virtual bool drawsContent() const;
+    virtual void paintContentsIfDirty(const Region&);
     virtual void updateCompositorResources(GraphicsContext3D*, CCTextureUpdater&);
     virtual void pushPropertiesTo(CCLayerImpl*);
     virtual void setNeedsDisplayRect(const FloatRect&);
@@ -73,6 +74,7 @@ private:
     unsigned m_textureId;
     bool m_textureChanged;
     bool m_textureUpdated;
+    bool m_contextLost;
 
     // The DrawingBuffer holding the WebGL contents for this layer.
     // A reference is not held here, because the DrawingBuffer already holds
